feat: bug fix product - enable event enter to login - move screen by code - change user information then back to Home.fxml - change location to save token